src/objects/Attendance_Event__c.object
<CustomObject>
    <description>Stores information about a student&apos;s attendance.</description>
    <label>Attendance Event</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Attendance Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <description>The time a tardy student arrived.</description>
        <inlineHelpText>The time a tardy student arrived.</inlineHelpText>
        <label>Arrival Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <description>Indicate whether this tardy or absence was for one class period or for the day.</description>
        <inlineHelpText>Indicate whether this tardy or absence was for one class period or for the day.</inlineHelpText>
        <label>Attendance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class Absence</fullName>
                </value>
                <value>
                    <fullName>Class Tardy</fullName>
                </value>
                <value>
                    <fullName>Day Absence</fullName>
                </value>
                <value>
                    <fullName>Day Tardy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student who&apos;s tardy or absent.</description>
        <inlineHelpText>The student who&apos;s tardy or absent.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendance Events</relationshipLabel>
        <relationshipName>Attendance_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The class and period in which the student was tardy or absent.</description>
        <inlineHelpText>The class and period in which the student was tardy or absent.</inlineHelpText>
        <label>Course Connection</label>
        <referenceTo>Course_Enrollment__c</referenceTo>
        <relationshipLabel>Attendance Events</relationshipLabel>
        <relationshipName>Attendance_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>The name of the Course in which the student was tardy or absent (read-only).</description>
        <formula>Course_Connection__r.Course_Offering__r.Course__r.Name</formula>
        <inlineHelpText>The name of the Course in which the student was tardy or absent (read-only).</inlineHelpText>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date of the tardy or absence.</description>
        <inlineHelpText>The date of the tardy or absence.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>For a partial-day excused absence, the time the student returned.</description>
        <inlineHelpText>For a partial-day excused absence, the time the student returned.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <description>More details about the student&apos;s absence or tardiness.</description>
        <inlineHelpText>More details about the student&apos;s absence or tardiness.</inlineHelpText>
        <label>Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Select an option that most closely matches the reason the student was absent or tardy. Use the Reason Description field to enter more details.</description>
        <inlineHelpText>Select an option that most closely matches the reason the student was absent or tardy. Use the Reason Description field to enter more details.</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>For a partial-day excused absence, the time the student left school.</description>
        <inlineHelpText>For a partial-day excused absence, the time the student left school.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Unexcused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates an unexcused tardy or absence.</description>
        <inlineHelpText>Indicates an unexcused tardy or absence.</inlineHelpText>
        <label>Unexcused</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>